--- a/style.css
+++ b/style.css
@@ -10,33 +10,70 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+.primary-header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+    padding: 1rem;
+    max-width: 100vw;
+    border-radius: 5px;
+    box-shadow: 10px 5px 5px #EEEEEE;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+body>nav>div>ul>li:nth-child(2) {
+    padding-right: 5rem;
+}
+
+.nav-links ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 0 .5rem;
+}
+
+.nav-links ul li a:hover {
+    color: grey;
+}
+
+.nav-links ul li a {
+    color: black;
+    text-decoration: none;
+    font-size: 1rem;
+    padding: 0 .5rem;
+}
+
 .header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.40)), url(../assets/hero.jpg);
     height: 50vh;
-    width: 100%;
+    max-width: 80vw;
+    margin: 2rem auto;
+    border-radius: 8px;
     background-position: center;
     background-size: cover;
+    position: relative;
 }
 
 .header h1 {
     color: white;
     text-align: center;
     padding: 10px;
-    font-size: 3rem;
+    font-size: 2rem;
     width: 100%;
     height: 50px;
     position: absolute;
-    top: 20%;
+    top: 30%;
 }
 
 .container {
     width: 90%;
     margin: auto;
-    padding-top: 100px;
+    padding-top: 1rem;
     text-align: center;
 }
-.container .bg p{
-    background-color:#f1f1f1;
+
+.container .bg p {
+    background-color: #f1f1f1;
     border-radius: 12px;
 }
 
@@ -50,17 +87,43 @@ p {
     line-height: 30px;
     padding: 10px;
 }
-h2{
+
+h2 {
     font-size: 1.3rem;
     font-weight: 700;
     padding: 20px 0 5px;
 
 }
+
 h3 {
     font-size: .8rem;
     padding-bottom: 20px;
 }
-.footer {
+
+.primary-footer {
+    display: flex;
+    justify-content: space-around;
+    margin: 3rem auto;
+    align-items: center;
+    padding: 2rem;
+    max-width: 100vw;
+    border-radius: 6px;
+    box-shadow: 10px -5px 5px #EEEEEE;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.icon .fa {
+    padding: 0 1rem;
+    margin: 0 14px;
+    font-size: 20px;
+    color: black;
+}
+
+.icon .fa:hover {
+    color: grey;
+}
+
+/* .footer {
     background-color: black;
     width: 100%;
     height: auto;
@@ -85,4 +148,4 @@ h3 {
         font-size: 0.8rem;
         display: inline;
     }
-} 
+}  */
